methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value seenBaggle
  while (seenBaggle){
         ^MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  while (seenBaggle){
  ^