methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (seenBaggle){
    for (stepper <-1 to 6){
      forward()
    }
  }
}